testsuite/tests/grammar/invalid_lexers/pattern_7.lkt
import common

lexer foo_lexer {
    val pat = p"example"
    val pat = p"example"
}
